force-app/main/default/objects/Attendance__c/fields/In_location__c.field-meta.xml
<CustomField>
    <fullName>In_location__c</fullName>
    <label>In location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>