force-app/main/default/objects/Attendance__c/fields/In_Location_Description__c.field-meta.xml
<CustomField>
    <fullName>In_Location_Description__c</fullName>
    <label>Login Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>