force-app/main/default/objects/Attendance__c/fields/Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Login_Date__c</fullName>
    <label>Login Date</label>
    <type>Date</type>
</CustomField>