force-app/main/default/objects/Attendance__c/fields/Out_Location__c.field-meta.xml
<CustomField>
    <fullName>Out_Location__c</fullName>
    <label>Out Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>