force-app/main/default/objects/Attendance__c/fields/Out_Location_Description__c.field-meta.xml
<CustomField>
    <fullName>Out_Location_Description__c</fullName>
    <label>Logout Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>