force-app/main/default/objects/Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Login_Date__c</columns>
    <columns>In_Time__c</columns>
    <columns>Out_Time__c</columns>
    <columns>In_Location_Description__c</columns>
    <columns>Out_Location_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>