force-app/main/default/objects/Attendance__c/listViews/Today_s_Attendance.listView-meta.xml
<ListView>
    <fullName>Today_s_Attendance</fullName>
    <columns>Contact__c</columns>
    <columns>Login_Date__c</columns>
    <columns>In_Time__c</columns>
    <columns>Out_Time__c</columns>
    <columns>In_Location_Description__c</columns>
    <columns>Out_Location_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Attendance</label>
</ListView>